# AWSOpsAIAgent

./: .env.example  .gitignore  AGENT_GUIDE.md  README.md  pyproject.toml  requirement.md
data/seed/: incidents.json
docs/: architecture.md  implementation-plan.md
infra/: README.md
infra/policies/: README.md
infra/terraform/: README.md
prompts/: README.md
scripts/: README.md
services/checkout-service/: README.md
services/gateway-service/: README.md
services/orders-service/: README.md
simulations/: README.md
simulations/cpu_spike/: README.md
simulations/memory_leak/: README.md
simulations/service_crash/: README.md
src/aiops_agent/: __init__.py  cli.py
src/aiops_agent/agent/: __init__.py
src/aiops_agent/approval/: __init__.py
src/aiops_agent/common/: config.py  contracts.py  logging.py  models.py
src/aiops_agent/detection/: __init__.py
src/aiops_agent/execution/: __init__.py
src/aiops_agent/ingestion/: __init__.py
src/aiops_agent/memory/: __init__.py
src/aiops_agent/orchestration/: workflow.py
src/aiops_agent/policy/: __init__.py
src/aiops_agent/rca/: __init__.py
src/aiops_agent/verification/: __init__.py
tests/integration/: test_project_layout.py
tests/unit/: test_evidence_models.py  test_workflow_summary.py
